Adding OpenSYCL support for AMD GPUs
Changes:

- Enabled AMD support using RDC+OpenSYCL

- Minor modifications to bandwidth-bound kernels to improve performance

- Adding GPU-aware-mpi option for communication

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,15 +36,24 @@ set(SYCL oneAPI CACHE STRING "Select the SYCL target architecture")
 set(MYSYCL oneAPI oneAPIold LLVM OpenSYCL)
 set_property(CACHE SYCL PROPERTY STRINGS ${MYSYCL})
 target_compile_definitions(echo PRIVATE SYCL=${SYCL})
-target_compile_options(echo PUBLIC -fsycl)
-target_link_options   (echo PUBLIC -fsycl)
 
 # A bit cumbersome to support all!
 if     (SYCL STREQUAL OpenSYCL )
   set(CMAKE_CXX_COMPILER "syclcc-clang")
-  message(STATUS "Configuring Echo with OpenSycl Toolchain")
+  set(SYCL_ARCH AMD CACHE STRING "Select the OpenSYCL target architecture (AMD or NVIDIA)")
+  set_property(CACHE SYCL_ARCH PROPERTY STRINGS AMD NVIDIA)
+  target_compile_definitions(echo PRIVATE SYCL_ARCH=${SYCL_ARCH})
+  if(SYCL_ARCH STREQUAL AMD)
+    message(STATUS "Configuring Echo with OpenSycl (AMD) Toolchain")
+    target_compile_options(echo PRIVATE -fgpu-rdc)
+    target_link_options(echo PRIVATE -fgpu-rdc --hip-link)
+  else()
+    message(STATUS "Configuring Echo with OpenSycl (NVIDIA) Toolchain")
+  endif()
 elseif (SYCL STREQUAL LLVM)
   set(CMAKE_CXX_COMPILER "clang++")
+  target_compile_options(echo PUBLIC -fsycl)
+  target_link_options   (echo PUBLIC -fsycl)
   set(SYCL_LLVM_CHAIN Intel CACHE STRING "Intel/NVidia/AMD")
   set(MYCHAIN AMD Intel NVidia)
   set_property(CACHE SYCL_LLVM_CHAIN PROPERTY STRINGS ${MYCHAIN})
@@ -81,6 +90,8 @@ else   ( )
   unset(SYCL_LLVM_CHAIN CACHE)
   unset(SYCL_LLVM_ARCH  CACHE)
   set(CMAKE_CXX_COMPILER "icpx")
+  target_compile_options(echo PUBLIC -fsycl)
+  target_link_options   (echo PUBLIC -fsycl)
   message(STATUS "Configuring Echo with oneAPI (Intel) Toolchain")
   message(STATUS "Set device target to SPIR-V Just-in-Time Compilation")
   #-- Stuff specific for oneAPI (for the moment)
